k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 5000          # Porta exposta pelo service
      targetPort: 5000    # Porta usada no container Flask
